--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -36,20 +36,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivOnboarding" />
 
-    <me.relex.circleindicator.CircleIndicator3
-        android:id="@+id/circleIndicator"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        app:ci_animator="@animator/nav_default_pop_enter_anim"
-        app:ci_animator_reverse="@animator/nav_default_pop_enter_anim"
-        app:ci_drawable="@drawable/selected_indicator"
-        app:ci_drawable_unselected="@drawable/unselected_indicator"
-        app:ci_height="13dp"
-        app:ci_width="13dp"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayoutIndicator"
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintVertical_bias="0.4"
+        android:background="@null"
         app:layout_constraintBottom_toBottomOf="@id/vpOnboarding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/vpOnboarding"
-        app:layout_constraintVertical_bias="0.4" />
+        app:tabBackground="@drawable/tab_selector"
+        app:tabGravity="fill"
+        app:tabIndicatorHeight="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
