--- a/app/src/main/res/drawable/selected_indicator.xml
+++ b/app/src/main/res/drawable/selected_indicator.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:innerRadius="0dp"
-    android:shape="ring"
-    android:thickness="12.61dp"
-    android:useLevel="false">
+    android:shape="oval">
     <solid android:color="#57A9FF" />
 </shape>
