--- a/app/src/main/res/drawable/unselected_indicator.xml
+++ b/app/src/main/res/drawable/unselected_indicator.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:innerRadius="0dp"
-    android:shape="ring"
-    android:thickness="14.29dp"
-    android:useLevel="false">
+    android:shape="oval">
     <solid android:color="@color/white" />
     <stroke
         android:width="0.84dp"
