--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -48,5 +48,18 @@
         android:id="@+id/loginFragment"
         android:name="com.example.smartlab.view.fragments.LoginFragment"
         android:label="LoginFragment"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login">
+        <action
+            android:id="@+id/action_loginFragment_to_emailCodeFragment"
+            app:destination="@id/emailCodeFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/emailCodeFragment"
+        android:name="com.example.smartlab.view.fragments.EmailCodeFragment"
+        android:label="EmailCodeFragment"
+        tools:layout="@layout/fragment_email_code" />
 </navigation>
