--- a/app/src/main/res/layout/fragment_email_code.xml
+++ b/app/src/main/res/layout/fragment_email_code.xml
@@ -50,7 +50,9 @@
                 android:layout_height="48dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/default_edit_text_shape"
-                android:gravity="center" />
+                android:gravity="center"
+                android:inputType="number"
+                android:maxLength="1" />
 
             <EditText
                 android:id="@+id/etCode2"
@@ -58,7 +60,9 @@
                 android:layout_height="48dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/default_edit_text_shape"
-                android:gravity="center" />
+                android:gravity="center"
+                android:inputType="number"
+                android:maxLength="1" />
 
             <EditText
                 android:id="@+id/etCode3"
@@ -66,14 +70,18 @@
                 android:layout_height="48dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/default_edit_text_shape"
-                android:gravity="center" />
+                android:gravity="center"
+                android:inputType="number"
+                android:maxLength="1" />
 
             <EditText
                 android:id="@+id/etCode4"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:background="@drawable/default_edit_text_shape"
-                android:gravity="center" />
+                android:gravity="center"
+                android:inputType="number"
+                android:maxLength="1" />
 
         </LinearLayout>
 
