--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -60,6 +60,8 @@
             android:layout_marginTop="4dp"
             android:background="@drawable/default_edit_text_shape"
             android:hint="example@mail.ru"
+            android:inputType="textEmailAddress"
+            android:maxLines="1"
             android:padding="14dp"
             android:textColor="#80000000"
             android:textColorHint="#80000000"
@@ -70,6 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginTop="34dp"
+            android:enabled="false"
             android:insetTop="0dp"
             android:insetBottom="0dp"
             android:text="Далее"
@@ -77,7 +80,6 @@
             android:textColor="@color/white"
             android:textSize="17sp"
             app:backgroundTint="@color/accent_inactive"
-            android:clickable="false"
             app:cornerRadius="10dp" />
     </LinearLayout>
 
@@ -103,8 +105,8 @@
         android:textColor="@color/black"
         android:textSize="17sp"
         app:backgroundTint="@color/white"
-        app:rippleColor="#1A000000"
         app:cornerRadius="10dp"
+        app:rippleColor="#1A000000"
         app:strokeColor="#EBEBEB"
         app:strokeWidth="1dp" />
 
