create password screen ui created

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -61,5 +61,18 @@
         android:id="@+id/emailCodeFragment"
         android:name="com.example.smartlab.view.fragments.EmailCodeFragment"
         android:label="EmailCodeFragment"
-        tools:layout="@layout/fragment_email_code" />
+        tools:layout="@layout/fragment_email_code">
+        <action
+            android:id="@+id/action_emailCodeFragment_to_createPasswordFragment"
+            app:destination="@id/createPasswordFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+    <fragment
+        android:id="@+id/createPasswordFragment"
+        android:name="com.example.smartlab.view.fragments.CreatePasswordFragment"
+        android:label="CreatePasswordFragment"
+        tools:layout="@layout/fragment_create_password" />
 </navigation>
