--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -74,5 +74,18 @@
         android:id="@+id/createPasswordFragment"
         android:name="com.example.smartlab.view.fragments.CreatePasswordFragment"
         android:label="CreatePasswordFragment"
-        tools:layout="@layout/fragment_create_password" />
+        tools:layout="@layout/fragment_create_password" >
+        <action
+            android:id="@+id/action_createPasswordFragment_to_patientCardFragment"
+            app:destination="@id/patientCardFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
+    </fragment>
+    <fragment
+        android:id="@+id/patientCardFragment"
+        android:name="com.example.smartlab.view.fragments.PatientCardFragment"
+        tools:layout="@layout/fragment_patient_card"
+        android:label="PatientCardFragment" />
 </navigation>
