--- a/app/src/main/res/layout/fragment_patient_card.xml
+++ b/app/src/main/res/layout/fragment_patient_card.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/mainContainer"
         android:orientation="vertical">
 
         <LinearLayout
@@ -18,7 +19,9 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="240dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_marginEnd="30dp"
                 android:layout_height="wrap_content"
                 android:text="Создание карты пациента"
                 android:textColor="@color/black"
@@ -27,7 +30,7 @@
 
             <TextView
                 android:id="@+id/tvSkip"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:text="Пропустить"
@@ -123,7 +126,7 @@
             android:textSize="15sp" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnNext"
+            android:id="@+id/btnCreatePatientCard"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginTop="34dp"
