--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,10 @@
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="30dp"
         android:paddingTop="8dp"
+        android:paddingBottom="30dp"
+        app:itemIconTint="@color/bottom_navigation_color_state"
+        app:itemTextColor="@color/bottom_navigation_color_state"
+        app:labelVisibilityMode="labeled"
         app:menu="@menu/bottom_navigation_menu" />
 </LinearLayout>
