--- a/app/src/main/res/layout/fragment_analyzes.xml
+++ b/app/src/main/res/layout/fragment_analyzes.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true">
 
     <LinearLayout
@@ -45,5 +45,140 @@
             android:paddingHorizontal="20dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_news_layout" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="32dp"
+            android:text="Каталог анализов"
+            android:textColor="#939396"
+            android:textSize="17sp"
+            android:textStyle="bold" />
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="none">
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/chipGroup"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:paddingHorizontal="20dp"
+                app:singleLine="true"
+                app:singleSelection="true">
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip1"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:checked="true"
+                    android:text="Популярные"
+                    android:textColor="@color/chip_text_color_state"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    app:chipBackgroundColor="@color/chip_background_state"
+                    app:chipCornerRadius="10dp"
+                    app:chipEndPadding="20dp"
+                    app:chipMinTouchTargetSize="0dp"
+                    app:chipStartPadding="20dp" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip2"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:text="Covid"
+                    android:textColor="@color/chip_text_color_state"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    app:chipBackgroundColor="@color/chip_background_state"
+                    app:chipCornerRadius="10dp"
+                    app:chipEndPadding="20dp"
+                    app:chipMinTouchTargetSize="0dp"
+                    app:chipStartPadding="20dp" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip3"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:text="Комплексные"
+                    android:textColor="@color/chip_text_color_state"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    app:chipBackgroundColor="@color/chip_background_state"
+                    app:chipCornerRadius="10dp"
+                    app:chipEndPadding="20dp"
+                    app:chipMinTouchTargetSize="0dp"
+                    app:chipStartPadding="20dp" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip4"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:text="Комплексные"
+                    android:textColor="@color/chip_text_color_state"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    app:chipBackgroundColor="@color/chip_background_state"
+                    app:chipCornerRadius="10dp"
+                    app:chipEndPadding="20dp"
+                    app:chipMinTouchTargetSize="0dp"
+                    app:chipStartPadding="20dp" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip5"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:text="Комплексные"
+                    android:textColor="@color/chip_text_color_state"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    app:chipBackgroundColor="@color/chip_background_state"
+                    app:chipCornerRadius="10dp"
+                    app:chipEndPadding="20dp"
+                    app:chipMinTouchTargetSize="0dp"
+                    app:chipStartPadding="20dp" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip6"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:text="Комплексные"
+                    android:textColor="@color/chip_text_color_state"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    app:chipBackgroundColor="@color/chip_background_state"
+                    app:chipCornerRadius="10dp"
+                    app:chipEndPadding="20dp"
+                    app:chipMinTouchTargetSize="0dp"
+                    app:chipStartPadding="20dp" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip7"
+                    style="@style/Widget.MaterialComponents.Chip.Choice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:text="Комплексные"
+                    android:textColor="@color/chip_text_color_state"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    app:chipBackgroundColor="@color/chip_background_state"
+                    app:chipCornerRadius="10dp"
+                    app:chipEndPadding="20dp"
+                    app:chipMinTouchTargetSize="0dp"
+                    app:chipStartPadding="20dp" />
+
+            </com.google.android.material.chip.ChipGroup>
+        </HorizontalScrollView>
+
+
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
