--- a/app/src/main/res/layout/fragment_analyzes.xml
+++ b/app/src/main/res/layout/fragment_analyzes.xml
@@ -67,118 +67,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:paddingHorizontal="20dp"
+                app:chipSpacingHorizontal="16dp"
                 app:singleLine="true"
                 app:singleSelection="true">
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip1"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:checked="true"
-                    android:text="Популярные"
-                    android:textColor="@color/chip_text_color_state"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    app:chipBackgroundColor="@color/chip_background_state"
-                    app:chipCornerRadius="10dp"
-                    app:chipEndPadding="20dp"
-                    app:chipMinTouchTargetSize="0dp"
-                    app:chipStartPadding="20dp" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip2"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:text="Covid"
-                    android:textColor="@color/chip_text_color_state"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    app:chipBackgroundColor="@color/chip_background_state"
-                    app:chipCornerRadius="10dp"
-                    app:chipEndPadding="20dp"
-                    app:chipMinTouchTargetSize="0dp"
-                    app:chipStartPadding="20dp" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip3"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:text="Комплексные"
-                    android:textColor="@color/chip_text_color_state"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    app:chipBackgroundColor="@color/chip_background_state"
-                    app:chipCornerRadius="10dp"
-                    app:chipEndPadding="20dp"
-                    app:chipMinTouchTargetSize="0dp"
-                    app:chipStartPadding="20dp" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip4"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:text="Комплексные"
-                    android:textColor="@color/chip_text_color_state"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    app:chipBackgroundColor="@color/chip_background_state"
-                    app:chipCornerRadius="10dp"
-                    app:chipEndPadding="20dp"
-                    app:chipMinTouchTargetSize="0dp"
-                    app:chipStartPadding="20dp" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip5"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:text="Комплексные"
-                    android:textColor="@color/chip_text_color_state"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    app:chipBackgroundColor="@color/chip_background_state"
-                    app:chipCornerRadius="10dp"
-                    app:chipEndPadding="20dp"
-                    app:chipMinTouchTargetSize="0dp"
-                    app:chipStartPadding="20dp" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip6"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:text="Комплексные"
-                    android:textColor="@color/chip_text_color_state"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    app:chipBackgroundColor="@color/chip_background_state"
-                    app:chipCornerRadius="10dp"
-                    app:chipEndPadding="20dp"
-                    app:chipMinTouchTargetSize="0dp"
-                    app:chipStartPadding="20dp" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip7"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="48dp"
-                    android:text="Комплексные"
-                    android:textColor="@color/chip_text_color_state"
-                    android:textSize="15sp"
-                    android:textStyle="bold"
-                    app:chipBackgroundColor="@color/chip_background_state"
-                    app:chipCornerRadius="10dp"
-                    app:chipEndPadding="20dp"
-                    app:chipMinTouchTargetSize="0dp"
-                    app:chipStartPadding="20dp" />
-
             </com.google.android.material.chip.ChipGroup>
         </HorizontalScrollView>
-
-
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
