--- a/app/src/main/res/layout/fragment_analyzes.xml
+++ b/app/src/main/res/layout/fragment_analyzes.xml
@@ -44,7 +44,7 @@
             android:orientation="horizontal"
             android:paddingHorizontal="20dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_news_layout" />
+            tools:listitem="@layout/item_news" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -69,8 +69,16 @@
                 android:paddingHorizontal="20dp"
                 app:chipSpacingHorizontal="16dp"
                 app:singleLine="true"
-                app:singleSelection="true">
-            </com.google.android.material.chip.ChipGroup>
+                app:singleSelection="true" />
         </HorizontalScrollView>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/rvCatalog"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="10dp"
+            tools:listitem="@layout/item_catalog" />
+
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
