--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,13 +17,13 @@
     <style name="DefaultChipStyle" parent="Widget.MaterialComponents.Chip.Choice">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">48dp</item>
+        <item name="chipMinHeight">48dp</item>
         <item name="android:textColor">@color/chip_text_color_state</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textStyle">bold</item>
         <item name="chipBackgroundColor">@color/chip_background_state</item>
         <item name="chipCornerRadius">10dp</item>
-        <item name="chipEndPadding">20dp</item>
-        <item name="chipMinTouchTargetSize">0dp</item>
-        <item name="chipStartPadding">20dp</item>
+        <item name="chipStartPadding">15dp</item>
+        <item name="chipEndPadding">15dp</item>
     </style>
 </resources>
