--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -119,7 +119,7 @@
             android:enabled="false"
             android:insetTop="0dp"
             android:insetBottom="0dp"
-            android:text="Создать"
+            android:text="Сохранить"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="17sp"
