fix profile screen

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -110,7 +110,7 @@
             app:drawableEndCompat="@drawable/drop_down_arrow" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnCreatePatientCard"
+            android:id="@+id/btnSavePatientCard"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginHorizontal="20dp"
