--- a/app/src/main/res/layout/fragment_analyzes.xml
+++ b/app/src/main/res/layout/fragment_analyzes.xml
@@ -31,6 +31,8 @@
                     android:drawableStart="@drawable/loupe"
                     android:drawablePadding="8dp"
                     android:hint="Искать анализы"
+                    android:inputType="text"
+                    android:maxLines="1"
                     android:paddingStart="14dp"
                     android:textSize="16sp"
                     tools:ignore="RtlSymmetry" />
@@ -50,9 +52,10 @@
             <LinearLayout
                 android:id="@+id/searchResultsContainer"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="80dp"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <com.google.android.material.divider.MaterialDivider
                     android:layout_width="match_parent"
@@ -72,8 +75,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="104dp"
-                android:orientation="vertical"
-                tools:visibility="gone">
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tvNews"
