--- a/app/src/main/res/layout/bottom_sheet_dialog_analyz_item.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog_analyz_item.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
@@ -139,7 +139,7 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginTop="20dp"
-            android:enabled="false"
+            android:layout_marginBottom="40dp"
             android:insetTop="0dp"
             android:insetBottom="0dp"
             android:text="Добавить за 690 ₽"
