--- a/app/src/main/res/layout/bottom_sheet_dialog_analyz_item.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog_analyz_item.xml
@@ -135,7 +135,7 @@
         </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnCreatePatientCard"
+            android:id="@+id/btnAdd"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_marginTop="20dp"
