--- a/app/src/main/res/layout/item_catalog.xml
+++ b/app/src/main/res/layout/item_catalog.xml
@@ -60,12 +60,14 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btnAdd"
-                android:layout_width="wrap_content"
+                android:layout_width="110dp"
                 android:layout_height="40dp"
                 android:layout_gravity="bottom"
                 android:insetTop="0dp"
                 android:insetBottom="0dp"
                 android:text="Добавить"
+                app:strokeColor="@color/accent"
+                app:strokeWidth="1dp"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="14sp"
